fixed spacing

--- a/custom.css
+++ b/custom.css
@@ -67,8 +67,8 @@ body {
 }
 
 .quote.stripe.segment .grid .column {
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: 3em;
+    padding-bottom: 5em;
 }
 
 .footer.segment {
